dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR(gen.c)

dnl Checks for programs.
AC_SET_MAKE
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h fcntl.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_FUNCS(strerror)

dnl Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
